Setting up the loading multiple tile images

--- a/SimpleTiled/index.html
+++ b/SimpleTiled/index.html
@@ -11,7 +11,10 @@
 
 </head>
 <body>
-    <canvas id="mainCanvas" class="center"></canvas>
+    <input type="file" id="files" multiple="multiple" accept="image/jpeg, image/png, image/jpg" />
+
+
+    <canvas hidden id="mainCanvas" class="center"></canvas>
 </body>
 
 </html>
