--- a/SimpleTiled/index.html
+++ b/SimpleTiled/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>
-        Wave Function Collapse
+        Wave Function Collapse - Simple Tiled Model
     </title>
     <script defer type="text/javascript" src="script.js"></script>
     <link rel="stylesheet" href="style.css">
