TODO -> now readme

--- a/SimpleTiled/index.html
+++ b/SimpleTiled/index.html
@@ -14,7 +14,7 @@
     <input type="file" id="files" multiple="multiple" accept="image/jpeg, image/png, image/jpg" />
 
 
-    <canvas hidden id="mainCanvas" class="center"></canvas>
+    <canvas hidden id="mainCanvas"></canvas>
 </body>
 
 </html>
