Setting up: loading 1 image, creating patterns, and maybe calculating all the neighbors for a pattern

--- a/OverlappingModel/index.html
+++ b/OverlappingModel/index.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-    <input type="file" id="file" accept="image/jpeg, image/png, image/jpg" />
+    <input type="file" id="fileInput" accept="image/jpeg, image/png, image/jpg" />
 
 
     <canvas hidden id="mainCanvas"></canvas>
