Starting work on converting canvas + context -> svg

--- a/OverlappingModel/index.html
+++ b/OverlappingModel/index.html
@@ -14,7 +14,8 @@
     <input type="file" id="fileInput" accept="image/jpeg, image/png, image/jpg" />
 
 
-    <canvas hidden id="mainCanvas"></canvas>
+    <!-- <canvas hidden id="mainCanvas"></canvas> -->
+    <svg id="mainSvg></svg>
 </body>
 
 </html>
