--- a/OverlappingModel/index.html
+++ b/OverlappingModel/index.html
@@ -13,9 +13,13 @@
 <body>
     <input type="file" id="fileInput" accept="image/jpeg, image/png, image/jpg" />
 
-
     <!-- <canvas hidden id="mainCanvas"></canvas> -->
-    <svg id="mainSvg></svg>
+    <svg id="mainSvg" xmlns="http://www.w3.org/2000/svg" hidden></svg>
+
+    <!-- <svg id="mainSvg" xmlns="http://www.w3.org/2000/svg" width="1189" height="953" viewBox="0 0 1189 953">
+        <rect x="124" y="6" width="47" height="47" id="0_0" style="fill: black;"></rect>
+    </svg> -->
+
 </body>
 
 </html>
