Starting to set up UI like 3d WGPU; Working so far

--- a/OverlappingModel2/index.html
+++ b/OverlappingModel2/index.html
@@ -2,19 +2,32 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>
         Wave Function Collapse - Overlapping Model
     </title>
+    
     <script defer type="text/javascript" src="script.js"></script>
     <link rel="stylesheet" href="style.css">
 
 </head>
-<body>
-    <input type="file" id="fileInput" accept="image/jpeg, image/png, image/jpg" />
 
-    <!-- <canvas hidden id="mainCanvas"></canvas> -->
-    <svg id="mainSvg" xmlns="http://www.w3.org/2000/svg" hidden></svg>
+<body onresize="resize();">
+
+    <div id="mainStuff" class="flex-container">
+
+        <div id="svgHolder">
+            <svg id="mainSvg" xmlns="http://www.w3.org/2000/svg"></svg>
+        </div>
+
+        <div id="settings">
+            <input type="file" id="fileInput" accept="image/jpeg, image/png, image/jpg" />
+        </div>
+
+    </div>
 </body>
 
 </html>
