In theory all UI for settings that require a restart should work and don't break with invalid input

--- a/OverlappingModel2/index.html
+++ b/OverlappingModel2/index.html
@@ -26,6 +26,7 @@
         <div id="settings">
 
             <input type="file" id="fileInput" accept="image/jpeg, image/png, image/jpg" />
+            <br class="spacing" />
 
             <label for="DIMS_X">Output Width:</label>
             <input class="smallInput" type="text" id="DIMS_X" value="30" />
