--- a/OverlappingModel2/index.html
+++ b/OverlappingModel2/index.html
@@ -28,6 +28,8 @@
             <input type="file" id="fileInput" accept="image/jpeg, image/png, image/jpg" />
             <br class="spacing" />
 
+            <hr />
+
             <label for="DIMS_X">Output Width:</label>
             <input class="smallInput" type="text" id="DIMS_X" value="30" />
             <br class="spacing" />
@@ -67,17 +69,21 @@
             <br />
             <hr />
 
-            <label for="DRAW_STATES">Draw non-collapsed states:</label>
-            <input type="checkbox" id="DRAW_STATES" />
-            <br class="spacing" />
+            <div id="liveCheckboxes">
 
-            <label for="DRAW_EDGES">Draw outlines:</label>
-            <input type="checkbox" id="DRAW_EDGES" />
-            <br class="spacing" />
+                <label for="DRAW_STATES">Draw non-collapsed states:</label>
+                <input type="checkbox" id="DRAW_STATES" checked/>
+                <br class="spacing" />
 
-            <label for="DRAW_H">Draw entropy:</label>
-            <input type="checkbox" id="DRAW_H" />
-            <br class="spacing" />
+                <label for="DRAW_EDGES">Draw outlines:</label>
+                <input type="checkbox" id="DRAW_EDGES" />
+                <br class="spacing" />
+
+                <label for="DRAW_H">Draw entropy:</label>
+                <input type="checkbox" id="DRAW_H" />
+                <br class="spacing" />
+
+            </div>
 
             <hr />
 
