Starting to add inputs for colors

--- a/OverlappingModel2/index.html
+++ b/OverlappingModel2/index.html
@@ -69,18 +69,34 @@
             <br />
             <hr />
 
-            <div id="liveCheckboxes">
+            <div id="liveUpdate">
 
                 <label for="DRAW_STATES">Draw non-collapsed states:</label>
                 <input type="checkbox" id="DRAW_STATES" checked/>
                 <br class="spacing" />
+                <br />
 
                 <label for="DRAW_EDGES">Draw outlines:</label>
                 <input type="checkbox" id="DRAW_EDGES" />
+                <!-- <br class="spacing" /> -->
+                <br />
+
+                <label for="OUTLINE_COLOR">Outline color:</label>
+                <input type="color" id="OUTLINE_COLOR" value="#ECEFF4" />
                 <br class="spacing" />
+
+                <label for="COLLAPSED_COLOR">Outline color:</label>
+                <input type="color" id="COLLAPSED_COLOR" value="#B48EAD" />
+                <br class="spacing" />
+                <br />
 
                 <label for="DRAW_H">Draw entropy:</label>
                 <input type="checkbox" id="DRAW_H" />
+                <!-- <br class="spacing" /> -->
+                <br />
+
+                <label for="H_COLOR">Entropy text color:</label>
+                <input type="color" id="H_COLOR" value="#BF616A" />
                 <br class="spacing" />
 
             </div>
