--- a/OverlappingModel2/index.html
+++ b/OverlappingModel2/index.html
@@ -78,26 +78,32 @@
 
                 <label for="DRAW_EDGES">Draw outlines:</label>
                 <input type="checkbox" id="DRAW_EDGES" />
-                <!-- <br class="spacing" /> -->
                 <br />
 
-                <label for="OUTLINE_COLOR">Outline color:</label>
-                <input type="color" id="OUTLINE_COLOR" value="#ECEFF4" />
-                <br class="spacing" />
+                <div id="OUTLINE_COLOR_HOLDER" hidden>
+                    <label for="OUTLINE_COLOR">Outline color:</label>
+                    <input type="color" id="OUTLINE_COLOR" value="#ECEFF4" />
+                    <br class="spacing" />
+                </div>
 
-                <label for="COLLAPSED_COLOR">Outline color:</label>
-                <input type="color" id="COLLAPSED_COLOR" value="#B48EAD" />
+                <div id="COLLAPSED_COLOR_HOLDER" hidden>
+                    <label for="COLLAPSED_COLOR">Outline color:</label>
+                    <input type="color" id="COLLAPSED_COLOR" value="#B48EAD" />
+                    <br class="spacing" />
+                    <br />
+                </div>
+
                 <br class="spacing" />
-                <br />
 
                 <label for="DRAW_H">Draw entropy:</label>
                 <input type="checkbox" id="DRAW_H" />
-                <!-- <br class="spacing" /> -->
                 <br />
 
-                <label for="H_COLOR">Entropy text color:</label>
-                <input type="color" id="H_COLOR" value="#BF616A" />
-                <br class="spacing" />
+                <div id="H_COLOR_HOLDER" hidden>
+                    <label for="H_COLOR">Entropy text color:</label>
+                    <input type="color" id="H_COLOR" value="#BF616A" />
+                    <br class="spacing" />
+                </div>
 
             </div>
 
@@ -106,7 +112,7 @@
             <button id="pauseButton" onclick="togglePause()" style="margin-top: 0.5em;">Pause</button>
             <br />
 
-            <button onclick="start()">Reset</button>
+            <button onclick="start()">Reset Output</button>
 
         </div>
 
