Displaying status in right bar (all console.log() removed)

--- a/OverlappingModel2/index.html
+++ b/OverlappingModel2/index.html
@@ -114,6 +114,19 @@
 
             <button onclick="start()">Reset Output</button>
 
+            <hr />
+
+            <span id="fpsText">FPS: 20</span>
+            <br />
+
+            <span id="percentDoneText">Percent Done: 0%</span>
+            <br />
+
+            <span id="stackText">Stack Length: 0</span>
+            <br />
+
+            <span id="iterationText">Random Decisions: 0</span>
+
         </div>
 
     </div>
