--- a/OverlappingModel2/index.html
+++ b/OverlappingModel2/index.html
@@ -113,6 +113,9 @@
             <br />
 
             <button onclick="start()">Reset Output</button>
+            <br />
+
+            <button onclick="svgToPng()">Save Ouput as PNG</button>
 
             <hr />
 
@@ -122,7 +125,7 @@
             <span id="percentDoneText">Percent Done: 0%</span>
             <br />
 
-            <span id="stackText">Stack Length: 0</span>
+            <span id="stackText">Propagation Stacks: 0</span>
             <br />
 
             <span id="iterationText">Random Decisions: 0</span>
