Removing TILE_OFFSET_X/Y -> fixing save as png option; "onload"/async when uploading new image fixed
DONE? (minus speed)

--- a/OverlappingModel2/index.html
+++ b/OverlappingModel2/index.html
@@ -81,13 +81,13 @@
                 <br />
 
                 <div id="OUTLINE_COLOR_HOLDER" hidden>
-                    <label for="OUTLINE_COLOR">Outline color:</label>
+                    <label for="OUTLINE_COLOR">Non-collapsed outline:</label>
                     <input type="color" id="OUTLINE_COLOR" value="#ECEFF4" />
                     <br class="spacing" />
                 </div>
 
                 <div id="COLLAPSED_COLOR_HOLDER" hidden>
-                    <label for="COLLAPSED_COLOR">Outline color:</label>
+                    <label for="COLLAPSED_COLOR">Collapsed outline:</label>
                     <input type="color" id="COLLAPSED_COLOR" value="#B48EAD" />
                     <br class="spacing" />
                     <br />
